// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GuestCheckoutLink /> should render null in case of all other 1`] = `
<Component>
  <Consumer>
    <GuestCheckoutLink
      redirectLocation="/"
      visible={true}
    />
  </Consumer>
</Component>
`;

exports[`<GuestCheckoutLink /> should render null in case of default login 1`] = `
<Component>
  <Consumer>
    <GuestCheckoutLink
      redirectLocation="/more"
      visible={true}
    />
  </Consumer>
</Component>
`;

exports[`<GuestCheckoutLink /> should render with one link for login in checkout page 1`] = `
<Component>
  <Consumer>
    <GuestCheckoutLink
      redirectLocation="/checkout"
      visible={true}
    >
      <div
        className="css-nil"
      >
        <Translate
          className="css-1fzm7bm"
          params={Object {}}
          string="checkout.or"
        >
          <span
            className="css-1fzm7bm"
          >
            checkout.or
          </span>
        </Translate>
        <Connect(Link)
          className="css-13v1itq"
          href="/checkout_guest"
        />
      </div>
    </GuestCheckoutLink>
  </Consumer>
</Component>
`;
